handoff: the harness is done, the server is next, and it starts with backups
Swept for a context reset before Phase 2, so this has to stand alone.

What changed in the file:

  The status header points a cold reader at Phase 2 first, because that is the
  work, and says where it starts: there are no backups of the world at all.

  "What is next" is rewritten around the product phases rather than the old
  Discord ordering. Phase 1 is marked done with what it actually delivered;
  Phase 2 carries the full audit of docker-compose.yml as findings rather than
  as a plan, since they are things that ARE true today - no backups, voice chat
  unreachable because 25565 publishes TCP only and 24454 not at all, view and
  simulation distance unset on a two-core box, a moving image tag pulled before
  every up.

  A table of what runs on the boxes and what is not version controlled. Six
  paths, four of them unversioned, which is the gap that already put two bugs
  into provision-box.sh.

  Why the ops alerting was paying for silence, and the two fields that were
  crying wolf: pid= in the ports baseline, and a single sshd scanner line.

  Numbers to carry forward, in one table, with the caveat that --load 3 is the
  calibrated setting and rows at different loads are not comparable.

  Open work at the moment of the handoff, including the two loose ends that
  will otherwise be rediscovered: a manual dispatch still needs the box powered
  on first, and bench.yml's workload input is a choice so it rejects comma
  lists that ParseWorkloads accepts.

  A new trap: a merged branch still accepts pushes, and squash-merging means
  your own commits are never ancestors of main, so the obvious check reports
  MISSING for work that did land. Verify by grepping main for content markers,
  case-insensitively.

Two stale claims removed, per the rule that a confidently wrong line is worse
than a missing one: the harness "still has not produced a full table", and a
sweep described as running